--- a/app/src/main/res/layout/fragment_profile_.xml
+++ b/app/src/main/res/layout/fragment_profile_.xml
@@ -24,10 +24,20 @@
                 android:id="@+id/ImageView12"
                 android:layout_width="414dp"
                 android:layout_height="209dp"
+                android:background="#8DE4D1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/for_profile_removebg_preview" />
+
+            <Button
+                android:id="@+id/button_edit_profile"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/rounded_button_edit"
+                android:text="Edit"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/imageview_foroprofile"
@@ -58,6 +68,16 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
+                    <ImageView
+                        android:id="@+id/button_logout"
+                        android:layout_width="40dp"
+                        android:layout_height="48dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginEnd="16dp"
+                        android:src="@drawable/logout"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
                     <TextView
                         android:id="@+id/textview_profile_nama"
                         android:layout_width="0dp"
@@ -66,7 +86,6 @@
                         android:layout_marginTop="24dp"
                         android:layout_marginEnd="80dp"
                         android:fontFamily="@font/abhaya_libre_semibold"
-                        android:text="Felix Jonathan Tjandra"
                         android:textColor="#000000"
                         android:textSize="22dp"
                         android:textStyle="bold"
@@ -76,7 +95,7 @@
 
                     <View
                         android:id="@+id/divider2"
-                        android:layout_width="300dp"
+                        android:layout_width="250dp"
                         android:layout_height="2dp"
                         android:layout_marginTop="16dp"
                         android:background="?android:attr/listDivider"
